--- a/blog/templates/blog/navbar.html
+++ b/blog/templates/blog/navbar.html
@@ -17,6 +17,7 @@
             {% endif %}
             <div class="space-x-4">
                 {% if request.user.is_authenticated %}
+                <span class="text-gray-800">Logged as: <strong>{{ request.user.username }}</strong></span>
                     <a href="{% url 'logout' %}"
                        class="bg-blue-600 text-white px-4 py-2 rounded-md hover:bg-blue-700 transition duration-300">Logout</a>
                 {% else %}
